--- a/src/app.html
+++ b/src/app.html
@@ -3,8 +3,10 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="icon" href="/favicon.png" />
+		<link rel="icon" href="https://static.wikia.nocookie.net/oneshot/images/b/bc/Wiki.png" />
+		<link rel="stylesheet" href="https://unpkg.com/sakura.css/css/sakura-dark.css" type="text/css">
 		<link rel="stylesheet" href="/styles.css">
+		<title>Tasmota</title>
 		%svelte.head%
 	</head>
 	<body>
