--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,7 @@
 		<link rel="icon" href="https://static.wikia.nocookie.net/oneshot/images/b/bc/Wiki.png" />
 		<link rel="stylesheet" href="https://unpkg.com/sakura.css/css/sakura-dark.css" type="text/css">
 		<link rel="stylesheet" href="/styles.css">
+		<link rel="manifest" href="/manifest.json">
 		<title>Tasmota</title>
 		%svelte.head%
 	</head>
